# LENS

./: .env.example  .gitignore  CLAUDE.md  LENS_CHARTER.md  LENS_IMPLEMENTATION.md  LENS_TEST_REFERENCE.md  README.md  ROAD_TO_MVP_AND_BEYOND.md  pyproject.toml  russ
docs/: LENS_IMPLEMENTATION.md  RUNBOOK.md
docs/event_schemas/: flow_completed.v1.json  flow_failed.v1.json  flow_started.v1.json  node_completed.v1.json  node_started.v1.json
src/lens/: __init__.py  api.py  composition.py  config.py  events.py  logging_setup.py  observer.py  projection.py
src/lens/api/: app.py  asgi.py
src/lens/backbone/: bus.py  kafka_buffer.py  kafka_bus.py  memory_bus.py
src/lens/events/: __init__.py  exceptions.py  registry.py  schema.py
src/lens/observer/: __main__.py  ap_bridge.py
src/lens/projection/: __main__.py  base.py  dashboard_state.py  memory_adapter.py  postgres_adapter.py  postgres_schema.py  store.py
tests/: test_mvp_pipeline.py
tests/e2e/: test_demo_in_memory.py
tests/unit/: test_cli_smoke.py  test_composition.py
tests/unit/api/: test_app.py
tests/unit/backbone/: test_bus.py  test_kafka_buffer.py  test_memory_bus.py
tests/unit/config/: test_settings.py
tests/unit/events/: test_exceptions.py  test_registry.py  test_schema.py
tests/unit/observer/: test_ap_bridge.py  test_csv_source.py  test_diff_snapshots.py
tests/unit/projection/: test_dashboard_state.py  test_memory_adapter.py  test_postgres_schema.py  test_store.py
