[project]
name = "lens"
version = "0.0.0"
description = "Layered Event-driven Navigation System — library build observability platform"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "aiokafka>=0.11",
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "httpx>=0.27",
    "jsonschema>=4.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lens"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/lens", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m", "not integration",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires real Kafka/Postgres; skipped by default in CI",
]

[tool.coverage.run]
source = ["src/lens"]
branch = true
omit = [
    "src/lens/backbone/kafka_bus.py",  # aiokafka wrappers — integration-tested only
    "src/lens/projection/postgres_adapter.py",  # asyncpg+SA wrappers — integration-tested only
    "src/lens/observer/__main__.py",  # CLI entry — smoke-tested via import
    "src/lens/projection/__main__.py",  # CLI entry — smoke-tested via import
    "src/lens/api/asgi.py",  # uvicorn entry — exercises composition; integration-only
    "src/lens/logging_setup.py",  # one-shot logging config; not exercised in tests
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
show_missing = true
